
<resources>
    <string name="app_name">GADS Leaderboard</string>
    <string name="splash_screen_img_desc">Gads image for splash screen</string>
    <string name="learning_tab_tile">Learning Leaders</string>
    <string name="iq_tab_title">Skill IQ Leaders</string>
    <string name="app_bar_submit">Submit</string>
    <string name="app_bar_title">LeaderBoard</string>
    <string name="gads_app_bar_banner">GADS app bar banner</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="project_submission">Project Submission</string>
    <string name="email_address">Email Address</string>
    <string name="project_url_on_github">Project URL on Github</string>
    <string name="submit">Submit</string>

    <string name="user_image_desc">Image of the user</string>

    <plurals name="user_details_msg">

        <item quantity="one">learning hour</item>
        <item quantity="other">learning hours</item>

    </plurals>

</resources>