<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <data>

        <variable
            name="viewModel"
            type="com.example.leaderboard.submit.SubmitViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SubmitActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />


        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/title"
            android:text="@string/project_submission"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/firstName"
            android:text="@={ viewModel.firstName }"
            android:background="@null"
            android:hint="@string/first_name_hint"
            android:textSize="@dimen/submit_text_size"
            android:layout_marginTop="64dp"
            android:paddingStart="@dimen/start_padding"
            android:paddingEnd="@dimen/start_padding"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toStartOf="@id/lastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/lastName"
            android:text="@={ viewModel.lastName }"
            android:background="@null"
            android:hint="@string/last_name_hint"
            android:textSize="@dimen/submit_text_size"
            android:paddingStart="@dimen/start_padding"
            android:paddingEnd="@dimen/start_padding"
            app:layout_constraintTop_toTopOf="@id/firstName"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/firstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/email"
            android:background="@null"
            android:text="@={ viewModel.emailAddress }"
            android:hint="@string/email_address"
            android:layout_marginTop="32dp"
            android:textSize="@dimen/submit_text_size"
            android:paddingStart="@dimen/start_padding"
            android:paddingEnd="@dimen/start_padding"
            app:layout_constraintTop_toBottomOf="@id/firstName"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_address" />

        <EditText
            android:id="@+id/github"
            android:text="@={ viewModel.githubUrl }"
            android:background="@null"
            android:hint="@string/project_url_on_github"
            android:layout_marginTop="32dp"
            android:paddingStart="@dimen/start_padding"
            android:paddingEnd="@dimen/start_padding"
            android:textSize="@dimen/submit_text_size"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:inputType="textEmailAddress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email_address" />

        <com.google.android.material.button.MaterialButton
            android:text="@string/submit"
            android:textAllCaps="false"
            android:textSize="@dimen/submit_text_size"
            app:layout_constraintTop_toBottomOf="@id/github"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            android:onClick="@{ () -> viewModel.submit() }"
            android:layout_marginTop="64dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>